--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   uses-material-design: true
   assets:
   - assets/Samu192.png
+  - assets/loc.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
