--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ flutter:
   assets:
   - assets/Samu192.png
   - assets/loc.png
+  - assets/bolaverde.png
+  - assets/mapateste.png
+  - assets/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
