--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   geolocator: ^13.0.2
+  google_maps_flutter: ^2.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
